2.2.4/_sources/gallery/mplot3d/tricontour3d.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_mplot3d_tricontour3d.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_mplot3d_tricontour3d.py:


==========================
Triangular 3D contour plot
==========================

Contour plots of unstructured triangular grids.

The data used is the same as in the second plot of trisurf3d_demo2.
tricontourf3d_demo shows the filled version of this example.




.. image:: /gallery/mplot3d/images/sphx_glr_tricontour3d_001.png
    :class: sphx-glr-single-img





.. code-block:: python


    import matplotlib.pyplot as plt
    from mpl_toolkits.mplot3d import Axes3D
    import matplotlib.tri as tri
    import numpy as np

    n_angles = 48
    n_radii = 8
    min_radius = 0.25

    # Create the mesh in polar coordinates and compute x, y, z.
    radii = np.linspace(min_radius, 0.95, n_radii)
    angles = np.linspace(0, 2*np.pi, n_angles, endpoint=False)
    angles = np.repeat(angles[..., np.newaxis], n_radii, axis=1)
    angles[:, 1::2] += np.pi/n_angles

    x = (radii*np.cos(angles)).flatten()
    y = (radii*np.sin(angles)).flatten()
    z = (np.cos(radii)*np.cos(3*angles)).flatten()

    # Create a custom triangulation.
    triang = tri.Triangulation(x, y)

    # Mask off unwanted triangles.
    triang.set_mask(np.hypot(x[triang.triangles].mean(axis=1),
                             y[triang.triangles].mean(axis=1))
                    < min_radius)

    fig = plt.figure()
    ax = fig.gca(projection='3d')
    ax.tricontour(triang, z, cmap=plt.cm.CMRmap)

    # Customize the view angle so it's easier to understand the plot.
    ax.view_init(elev=45.)

    plt.show()


.. _sphx_glr_download_gallery_mplot3d_tricontour3d.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: tricontour3d.py <tricontour3d.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: tricontour3d.ipynb <tricontour3d.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
